/**
 * Follow this process to write e2e tests for the CLI project:
 *
 * 1. Test if all the necessary mocks for your tests already exist.
 *    In mock mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=1 FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable export --variable-id esv-test-var
 *
 *    If your command completes without errors and with the expected results,
 *    all the required mocks already exist and you are good to write your
 *    test and skip to step #4.
 *
 *    If, however, your command fails and you see errors like the one below,
 *    you know you need to record the mock responses first:
 *
 *    [Polly] [adapter:node-http] Recording for the following request is not found and `recordIfMissing` is `false`.
 *
 * 2. Record mock responses for your exact command.
 *    In mock record mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable export --variable-id esv-test-var
 *
 *    Wait until you see all the Polly instances (mock recording adapters) have
 *    shutdown before you try to run step #1 again.
 *    Messages like these indicate mock recording adapters shutting down:
 *
 *    Polly instance 'conn/4' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 2s...
 *    Polly instance 'conn/save/3' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 1s...
 *    Polly instance 'conn/save/3' stopping in 2s...
 *    Polly instance 'conn/4' stopped.
 *    Polly instance 'conn/save/3' stopping in 1s...
 *    Polly instance 'conn/save/3' stopped.
 *
 * 3. Validate your freshly recorded mock responses are complete and working.
 *    Re-run the exact command you want to test in mock mode (see step #1).
 *
 * 4. Write your test.
 *    Make sure to use the exact command including number of arguments and params.
 *
 * 5. Commit both your test and your new recordings to the repository.
 *    Your tests are likely going to reside outside the frodo-lib project but
 *    the recordings must be committed to the frodo-lib project.
 */

/*
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -i esv-test-var -f test/e2e/exports/all/allVariables.variable.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import --variable-id esv-test-var --file test/e2e/exports/all/allVariables.variable.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -i esv-test-var -f allVariables.variable.json -D test/e2e/exports/all
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -f test/e2e/exports/all/allVariables.variable.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -f allVariables.variable.json -D test/e2e/exports/all
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -a --file test/e2e/exports/all/allVariables.variable.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -a -f allVariables.variable.json -D test/e2e/exports/all
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -AD test/e2e/exports/all-separate/cloud/global/variable
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo esv variable import -f esv-test-var.variable.json --directory test/e2e/exports/all-separate/cloud/global/variable
*/
import cp from 'child_process';
import { promisify } from 'util';
import { getEnv } from './utils/TestUtils';
import { connection as c } from './utils/TestConfig';

const exec = promisify(cp.exec);

process.env['FRODO_MOCK'] ||= '1';
const env = getEnv(c);

const allDirectory = 'test/e2e/exports/all';
const allVariablesFileName = 'allVariables.variable.json';
const allVariablesExport = `${allDirectory}/${allVariablesFileName}`;
const allSeparateVariablesDirectory = `test/e2e/exports/all-separate/cloud/global/variable`;

describe('frodo esv variable import', () => {
  test(`"frodo esv variable import -i esv-test-var -f ${allVariablesExport}" Import variable "esv-test-var" from "${allVariablesExport}".`, async () => {
    const CMD = `frodo esv variable import -i esv-test-var -f ${allVariablesExport}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import --variable-id esv-test-var --file ${allVariablesExport}" Import variable "esv-test-var" from "${allVariablesFileName}".`, async () => {
    const CMD = `frodo esv variable import --variable-id esv-test-var --file ${allVariablesExport}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -i esv-test-var -f ${allVariablesFileName} -D ${allDirectory}" Import variable "esv-test-var" from "${allVariablesFileName}" in directory "${allDirectory}".`, async () => {
    const CMD = `frodo esv variable import -i esv-test-var -f ${allVariablesFileName} -D ${allDirectory}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -f ${allVariablesExport}" Import first variable from "${allVariablesExport}".`, async () => {
    const CMD = `frodo esv variable import -f ${allVariablesExport}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -f ${allVariablesFileName} -D ${allDirectory}" Import first variable from "${allVariablesFileName}" in directory "${allDirectory}"`, async () => {
    const CMD = `frodo esv variable import -f ${allVariablesFileName} -D ${allDirectory}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -a --file ${allVariablesExport}" Import all variables from "${allVariablesExport}".`, async () => {
    const CMD = `frodo esv variable import -a --file ${allVariablesExport}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -a -f ${allVariablesFileName} -D ${allDirectory}" Import all variables from "${allVariablesFileName}" in directory "${allSeparateVariablesDirectory}".`, async () => {
    const CMD = `frodo esv variable import -a -f ${allVariablesFileName} -D ${allDirectory}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -AD ${allSeparateVariablesDirectory}" Import all variables in directory "${allSeparateVariablesDirectory}".`, async () => {
    const CMD = `frodo esv variable import -AD ${allSeparateVariablesDirectory}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });

  test(`"frodo esv variable import -f esv-test-var.variable.json --directory ${allSeparateVariablesDirectory}" Import first variable from "esv-test-var.variable.json" in directory "${allSeparateVariablesDirectory}".`, async () => {
    const CMD = `frodo esv variable import -f esv-test-var.variable.json --directory ${allSeparateVariablesDirectory}`;
    const { stdout } = await exec(CMD, env);
    expect(stdout).toMatchSnapshot()
  });
});
